Companies Section Added Data

--- a/index.html
+++ b/index.html
@@ -82,11 +82,16 @@
                 </div>
             </div>
             <div class="overflow-x-auto bg-white">
-                <table class="min-w-full bg-white">
+                <table class="min-w-full text-black bg-white">
                     <thead>
                         <tr>
                             <th class="py-2 px-4 border-b text-left">Company</th>
-                            <th class="py-2 px-4 border-b text-left">Ticker</th>
+                            <th class="py-2 px-4 border-b text-left">
+                                <div class="inline-flex items-center">
+                                    Ticker
+                                    <img class="ml-1" src="asset/arrow_drop_down (1).png" alt="Arrow Drop Down">
+                                </div>
+                            </th>
                             <th class="py-2 px-4 border-b text-left">Vertical</th>
                             <th class="py-2 px-4 border-b text-left">Price</th>
                             <th class="py-2 px-4 border-b text-left">Market Cap ($B)</th>
@@ -97,7 +102,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="hover:bg-gray-100">
+                        <tr class="bg-gray-100 hover:bg-gray-200">
                             <td class="py-2 px-4 border-b">Adyen</td>
                             <td class="py-2 px-4 border-b">ADYEN</td>
                             <td class="py-2 px-4 border-b">Payments</td>
@@ -108,7 +113,7 @@
                             <td class="py-2 px-4 border-b">6.3</td>
                             <td class="py-2 px-4 border-b">24.3%</td>
                         </tr>
-                        <tr class="hover:bg-gray-100">
+                        <tr class="hover:bg-gray-200">
                             <td class="py-2 px-4 border-b">Affirm</td>
                             <td class="py-2 px-4 border-b">AFRM</td>
                             <td class="py-2 px-4 border-b">Lending</td>
@@ -119,7 +124,7 @@
                             <td class="py-2 px-4 border-b">4.9</td>
                             <td class="py-2 px-4 border-b">77.1%</td>
                         </tr>
-                        <tr class="hover:bg-gray-100">
+                        <tr class="bg-gray-100 hover:bg-gray-200">
                             <td class="py-2 px-4 border-b">Alkami Technology</td>
                             <td class="py-2 px-4 border-b">ALKT</td>
                             <td class="py-2 px-4 border-b">B2B SaaS</td>
@@ -129,6 +134,83 @@
                             <td class="py-2 px-4 border-b">53.0%</td>
                             <td class="py-2 px-4 border-b">7.0</td>
                             <td class="py-2 px-4 border-b">10.0%</td>
+                        </tr>
+                        <tr class="hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">AvidXchange</td>
+                            <td class="py-2 px-4 border-b">AVDX</td>
+                            <td class="py-2 px-4 border-b">Payments</td>
+                            <td class="py-2 px-4 border-b">$10.21</td>
+                            <td class="py-2 px-4 border-b">$2.0</td>
+                            <td class="py-2 px-4 border-b">27.0%</td>
+                            <td class="py-2 px-4 border-b">61.5%</td>
+                            <td class="py-2 px-4 border-b">6.0</td>
+                            <td class="py-2 px-4 border-b">10.5% </td>
+                        </tr>
+                        <tr class="bg-gray-100 hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">Bakkt Holdings</td>
+                            <td class="py-2 px-4 border-b">BKKT</td>
+                            <td class="py-2 px-4 border-b">Wealth</td>
+                            <td class="py-2 px-4 border-b">$1.32</td>
+                            <td class="py-2 px-4 border-b">$0.1</td>
+                            <td class="py-2 px-4 border-b">38%</td>
+                            <td class="py-2 px-4 border-b">--</td>
+                            <td class="py-2 px-4 border-b">0.4</td>
+                            <td class="py-2 px-4 border-b">13.8% </td>
+                        </tr>
+                        <tr class="hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">Virtu Financial Inc</td>
+                            <td class="py-2 px-4 border-b">VIRT</td>
+                            <td class="py-2 px-4 border-b">Wealth</td>
+                            <td class="py-2 px-4 border-b">$17.0</td>
+                            <td class="py-2 px-4 border-b">$3.1</td>
+                            <td class="py-2 px-4 border-b">-22.0%</td>
+                            <td class="py-2 px-4 border-b">38.2%</td>
+                            <td class="py-2 px-4 border-b">2.6</td>
+                            <td class="py-2 px-4 border-b">-17.8%</td>
+                        </tr>
+                        <tr class="bg-gray-100 hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">Adyen</td>
+                            <td class="py-2 px-4 border-b">AFRM</td>
+                            <td class="py-2 px-4 border-b">Payments</td>
+                            <td class="py-2 px-4 border-b">$17.15</td>
+                            <td class="py-2 px-4 border-b">$50.5</td>
+                            <td class="py-2 px-4 border-b">49.0%</td>
+                            <td class="py-2 px-4 border-b">15.8%</td>
+                            <td class="py-2 px-4 border-b">6.3</td>
+                            <td class="py-2 px-4 border-b">24.3%</td>
+                        </tr>
+                        <tr class="hover:bg-gray-200"> 
+                            <td class="py-2 px-4 border-b">Affirm</td>
+                            <td class="py-2 px-4 border-b">AFRM</td>
+                            <td class="py-2 px-4 border-b">Lending</td>
+                            <td class="py-2 px-4 border-b">$16.12</td>
+                            <td class="py-2 px-4 border-b">$4.7</td>
+                            <td class="py-2 px-4 border-b">32.0%</td>
+                            <td class="py-2 px-4 border-b">48.7%</td>
+                            <td class="py-2 px-4 border-b">4.9</td>
+                            <td class="py-2 px-4 border-b">77.1%</td>
+                        </tr>
+                        <tr class="bg-gray-100 hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">Alkami Technology</td>
+                            <td class="py-2 px-4 border-b">ALKT</td>
+                            <td class="py-2 px-4 border-b">B2B SaaS</td>
+                            <td class="py-2 px-4 border-b">$16.27</td>
+                            <td class="py-2 px-4 border-b">$1.5</td>
+                            <td class="py-2 px-4 border-b">34.0%</td>
+                            <td class="py-2 px-4 border-b">53.0%</td>
+                            <td class="py-2 px-4 border-b">7.0</td>
+                            <td class="py-2 px-4 border-b">10.0%</td>
+                        </tr>
+                        <tr class="hover:bg-gray-200">
+                            <td class="py-2 px-4 border-b">AvidXchange</td>
+                            <td class="py-2 px-4 border-b">AVDX</td>
+                            <td class="py-2 px-4 border-b">Payments</td>
+                            <td class="py-2 px-4 border-b">$10.21</td>
+                            <td class="py-2 px-4 border-b">$2.0</td>
+                            <td class="py-2 px-4 border-b">27.0%</td>
+                            <td class="py-2 px-4 border-b">61.5%</td>
+                            <td class="py-2 px-4 border-b">6.0</td>
+                            <td class="py-2 px-4 border-b">10.5% </td>
                         </tr>
                         <!-- Repeat for other rows -->
                     </tbody>
