footer fix issue

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         </div>
     </nav>
     
-    
     <main class="w-full">
         <!-- Companies Section Start -->
         <section class="w-full p-8 bg-white rounded-lg shadow-md md:mb-12">
@@ -212,7 +211,6 @@
                             <td class="py-2 px-4 border-b">6.0</td>
                             <td class="py-2 px-4 border-b">10.5% </td>
                         </tr>
-                        <!-- Repeat for other rows -->
                     </tbody>
                 </table>
             </div>
@@ -254,13 +252,13 @@
 
         <!-- Stories & Ideas Section start -->
         <section class="px-4 md:px-14 mb-14">
-            <div class="md:mb-32 text-center md:text-left">
+            <div class=" text-center md:text-left">
                 <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-5">Stories & Ideas</h1>
                 <p class="text-black text-xl">The latest news and updates</p>
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
                 <!-- Card 1 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Sahaubiddin Sagar</p>
@@ -271,7 +269,7 @@
                     </div>
                 </div>
                 <!-- Card 2 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Nayem Khan</p>
@@ -282,7 +280,7 @@
                     </div>
                 </div>
                 <!-- Card 3 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Shagar Sahaubiddin</p>
@@ -293,7 +291,7 @@
                     </div>
                 </div>
                 <!-- Card 4 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Sahaubiddin Sagar</p>
@@ -304,7 +302,7 @@
                     </div>
                 </div>
                 <!-- Card 5 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Nayem Khan</p>
@@ -315,7 +313,7 @@
                     </div>
                 </div>
                 <!-- Card 6 -->
-                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-0">
+                <div class="bg-white p-5 rounded-lg shadow-md mt-24 md:mt-[100px]">
                     <img class="w-[150px] mt-[-80px] mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Shagar Sahaubiddin</p>
@@ -329,7 +327,7 @@
         </section>
         <!-- Stories & Ideas Section end -->
 
-        <div class="divider px-5 md:px-20 my-4 md:my-32"></div>
+        <div class="divider px-7 md:px-24 my-4 md:my-32"></div>
 
         <!-- About WPPOOL Section start -->
         <section class="px-4 md:px-14 mb-14 w-full rounded-md">
@@ -352,7 +350,7 @@
         </section>
         <!-- About WPPOOL Section end -->
 
-        <div class="divider px-5 md:px-20 my-4 md:my-32"></div>
+        <div class="divider px-7 md:px-24 my-4 md:my-32"></div>
 
         <!-- Selected WPPOOL Portfolio Companies section Start  -->
         <section class="px-4 md:px-14 mb-14">
@@ -387,15 +385,19 @@
     <!-- Footer Start-->
     <footer class="bg-gray-200 py-10 rounded-md">
         <div class="container mx-auto px-4 md:px-14 flex flex-wrap my-8 md:my-16">
-            <div class="w-full lg:w-2/3 mb-8 lg:mb-0 text-center md:text-left">
-                <h2 class="text-2xl md:w-[450px] md:text-4xl text-black font-semibold mb-4">Experience remarkable WordPress products with a new level of power, beauty, and human-centered designs.</h2>
+            <div class="w-full lg:w-2/3 mb-8 lg:mb-0 text-center md:text-left flex flex-col gap-6 justify-between">
+                <h2 class="text-2xl md:w-[450px] md:text-4xl text-black font-semibold mb-4">
+                    Experience remarkable WordPress products with a new level of power, beauty, and human-centered designs.
+                </h2>
                 <div class="">
                     <p class="mb-4">
                         <a class="pr-2 md:pr-6" href="#">&copy;2024</a>
                         <a class="pr-2 md:pr-6" href="#">Terms of Use</a>
                         <a class="pr-2 md:pr-6" href="#">Privacy Policy</a>
                     </p>
-                    <p class="md:w-[500px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaera.</p>
+                    <p class="md:w-[500px]">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaera.
+                    </p>
                 </div>
             </div>
             <div class="w-full lg:w-1/3 flex flex-wrap lg:flex-nowrap">
