Some classes have been edited

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main class="w-full">
 
         <!-- Hero Section Start -->
-        <section class="hero-bg w-full flex flex-col md:flex-row gap-6 md:justify-between items-center h-screen p-8 ">
+        <section class="hero-bg w-full flex flex-col md:flex-row justify-between items-center h-screen p-8 text-white">
             <div class="space-y-8 text-center md:text-left">
                 <div class="space-y-2">
                     <p class="text-4xl font-bold">60</p>
@@ -296,7 +296,7 @@
 
         <!-- State of USA Section start  -->
         <section class="px-4 md:px-14 mb-14">
-            <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-12">State of USA</h1>
+            <h1 class="text-black text-center md:text-left text-3xl md:text-5xl mb-4 md:mb-12">State of USA</h1>
         </section>
         <!-- State of USA Section end  -->
 
