arrow_downward_alt button added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         </section>
     
         <div class="absolute hidden md:block bottom-0 right-20">
-            <button class="bg-white text-blue-600 p-4 rounded-full">&#8681;</button>
+            <button class="bg-white text-blue-600 p-4 rounded-full">
+                <img src="asset/arrow_downward_altarrow_downward_alt.png" alt="" srcset="">
+            </button>
         </div>
 
         <!-- Hero Section End -->
