--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <!-- Hero Section End -->
 
         <!-- Navbar Start-->
-        <nav class="navbar sticky top-0 z-50 mt-[60px]">
+        <nav class="navbar sticky top-0 z-50 mt-4 md:mt-[60px]">
             <div class="p-3 rounded-xl flex justify-between items-center container mx-auto bg-white">
                 <a class="flex items-center text-xl font-bold">
                     <img src="asset/Group 1325.png" alt="Logo" class="h-8 mr-2">
@@ -148,7 +148,7 @@
 
         <!-- Chart Section Start -->
         <section class="h-full px-5 pb-5 bg-white mb-[60px]">
-            <div class="mt-5 flex flex-col lg:flex-row h-full">
+            <div class="my-5 py-5 flex flex-col lg:flex-row h-full">
                 <div class="left-side w-full lg:w-1/4 xl:w-1/5 h-auto lg:h-auto mb-5 lg:mb-0">
                     <div class="bg-gray-100 rounded border-gray-300 p-2 h-full">
                         <div class="bg-blue-600 text-white p-4 w-full h-[36px] flex items-center rounded-md">
@@ -396,7 +396,7 @@
         <!-- Companies Section End -->
 
         <!-- Potential Future Listings Section Start-->
-        <section class="px-4 md:px-14 mb-36">
+        <section class="px-4 md:px-14 md:mb-36">
             <div class="potential-future-text text-center md:text-left">
                 <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-5">Potential Future Listings</h1>
                 <p class="text-black mb-5">Porem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. <br class="hidden md:hidden lg:block"> Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
@@ -478,18 +478,17 @@
         </section>
         <!-- State of USA Section end  -->
 
-
         <!-- Stories & Ideas Section start -->
-        <section class="px-4 md:px-14 my-32">
+        <section class="px-4 md:px-14 mt-16 md:mt-32">
             <div class=" text-center md:text-left">
                 <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-5">Stories & Ideas</h1>
                 <p class="text-black text-xl">The latest news and updates</p>
             </div>
 
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-32">
                 <!-- Card 1 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Sahaubiddin Sagar</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -499,8 +498,8 @@
                     </div>
                 </div>
                 <!-- Card 2 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Nayem Khan</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -510,8 +509,8 @@
                     </div>
                 </div>
                 <!-- Card 3 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Shagar Sahaubiddin</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -521,8 +520,8 @@
                     </div>
                 </div>
                 <!-- Card 4 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Sahaubiddin Sagar</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -532,8 +531,8 @@
                     </div>
                 </div>
                 <!-- Card 5 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 98.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Nayem Khan</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -543,8 +542,8 @@
                     </div>
                 </div>
                 <!-- Card 6 -->
-                <div class="bg-white p-5 rounded-lg shadow-md ">
-                    <img class="w-[150px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
+                <div class="bg-white p-5 rounded-lg shadow-md mb-20">
+                    <img class="w-[150px] mt-[-80px]  mx-auto md:mx-0" src="asset/image 97.png" alt="Author Image">
                     <div class="mt-4 text-center md:text-left">
                         <p class="text-blue-600 font-semibold">By: Shagar Sahaubiddin</p>
                         <p class="mt-2 text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia.</p>
@@ -557,7 +556,7 @@
         </section>
         <!-- Stories & Ideas Section end -->
 
-        <div class="divider px-7 md:px-24 my-4 md:my-32"></div>
+        <div class="divider px-7 md:px-24 mb-16 md:my-32"></div>
 
         <!-- About WPPOOL Section start -->
         <section class="px-4 md:px-14 mb-14 w-full rounded-md">
