didvider color change

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         </section>
         <!-- Stories & Ideas Section end -->
 
-        <div class="divider px-7 md:px-24 mb-16 md:my-32"></div>
+        <div class="divider divider-primary px-7 md:px-24 mb-16 md:my-32"></div>
 
         <!-- About WPPOOL Section start -->
         <section class="px-4 md:px-14 mb-14 w-full rounded-md">
@@ -579,7 +579,7 @@
         </section>
         <!-- About WPPOOL Section end -->
 
-        <div class="divider px-7 md:px-24 my-4 md:my-32"></div>
+        <div class="divider divider-primary px-7 md:px-24 my-4 md:my-32"></div>
 
         <!-- Selected WPPOOL Portfolio Companies section Start  -->
         <section class="px-4 md:px-14 mb-14">
