--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                     </div>
                     <div class="my-5 flex flex-col lg:flex-row justify-between items-center">
                         <div class="flex gap-3 mb-5 lg:mb-0">
-                            <button class="bg-blue-500 text-white py-2 px-4 rounded-md inline-flex items-center">
+                            <button class="bg-blue-500 text-white py-2 px-4 rounded-full inline-flex items-center">
                                 Sectors
                                 <img class="ml-[20px]" src="asset/arrow_drop_down.png" alt="Arrow Drop Down">
                             </button>
-                            <button class="bg-blue-500 text-white py-2 px-4 rounded-md inline-flex items-center">
+                            <button class="bg-blue-500 text-white py-2 px-4 rounded-full inline-flex items-center">
                                 Types of IPO
                                 <img class="ml-[20px]" src="asset/arrow_drop_down.png" alt="Arrow Drop Down">
                             </button>
@@ -389,8 +389,8 @@
 
         <!-- All Companies Button Section Start  -->
         <div class="flex flex-col md:flex-row justify-center mt-6 space-y-4 md:space-y-0 md:space-x-4 p-5 md:p-0 mb-5 md:mb-[150px]">
-            <button class="bg-blue-600 text-white py-2 px-4 rounded-lg w-full md:w-auto shadow-2xl shadow-custom-shadow">Download 'All Companies' Data</button>
-            <button class="bg-blue-600 text-white py-2 px-4 rounded-lg w-full md:w-auto shadow-2xl shadow-custom-shadow">View Methodology</button>
+            <button class="bg-blue-600 text-white py-2 px-4 rounded-full w-full md:w-auto shadow-2xl shadow-custom-shadow">Download 'All Companies' Data</button>
+            <button class="bg-blue-600 text-white py-2 px-4 rounded-full w-full md:w-auto shadow-2xl shadow-custom-shadow">View Methodology</button>
         </div>
         <!-- All Companies Button Section End  -->
         <!-- Companies Section End -->
