--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <!-- Chart Section End -->
 
         <!-- Companies Section Start -->
-        <section class="w-full p-8 bg-white rounded-lg shadow-md mb-8 md:mb-14">
+        <section class="w-full p-8 bg-white rounded-2xl shadow-md mb-8 md:mb-14">
             <div class="flex flex-col md:flex-row justify-between items-center mb-6">
                 <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-0">All Companies</h1>
                 <div class="flex justify-between w-full md:w-[588px]">
@@ -402,16 +402,16 @@
                 <p class="text-black mb-5">Porem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. <br class="hidden md:hidden lg:block"> Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
             </div>
             <div class="potential-future-img">
-                <div><img src="asset/Potential-Future-Listings/Group 227.png" alt="stripe"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 417.png" alt="Klarna"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 220.png" alt="Plaid"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 221.png" alt="checkout.com"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 222.png" alt="Revolut"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 226.png" alt="chime"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 223.png" alt="N26"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 224.png" alt="Brex"></div>
-                <div><img src="asset/Potential-Future-Listings/Group 225.png" alt="deel"></div>
-                <div><img src="asset/Potential-Future-Listings/Group.png" alt="gusto"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 227.png" alt="stripe"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 417.png" alt="Klarna"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 220.png" alt="Plaid"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 221.png" alt="checkout.com"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 222.png" alt="Revolut"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 226.png" alt="chime"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 223.png" alt="N26"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 224.png" alt="Brex"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group 225.png" alt="deel"></div>
+                <div class="rounded-lg"><img src="asset/Potential-Future-Listings/Group.png" alt="gusto"></div>
             </div>
         </section>
         <!-- Potential Future Listings Section End-->
@@ -434,9 +434,9 @@
             <div class="overflow-hidden splide" id="splide">
                 <div class="splide__track h-[350px]">
                     <div class="flex gap-6 splide__list">
-                        <img class="splide__slide w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/22f80e576dcfba0b9c815598d4437195.jpg" alt="Slide 1">
-                        <img class="splide__slide w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/3d456a5d2fffe172f1a16a1d04c8cce5.jpg" alt="Slide 2">
-                        <img class="splide__slide w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/6f932a30dd43302972a9995887dff6ec.jpg" alt="Slide 2">
+                        <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/22f80e576dcfba0b9c815598d4437195.jpg" alt="Slide 1">
+                        <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/3d456a5d2fffe172f1a16a1d04c8cce5.jpg" alt="Slide 2">
+                        <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/6f932a30dd43302972a9995887dff6ec.jpg" alt="Slide 2">
                     </div>
                 </div>
             </div>
@@ -559,8 +559,8 @@
         <div class="divider divider-primary px-7 md:px-24 mb-16 md:my-32"></div>
 
         <!-- About WPPOOL Section start -->
-        <section class="px-4 md:px-14 mb-14 w-full rounded-md">
-            <div class="bg-white rounded-lg shadow-lg p-8 flex flex-col md:flex-row items-center w-full">
+        <section class="px-4 md:px-14 mb-14 w-full ">
+            <div class="bg-white rounded-2xl shadow-lg p-8 flex flex-col md:flex-row items-center w-full">
                 <div class="md:w-1/2 text-center md:text-left">
                     <h2 class="text-5xl text-black font-bold mb-2">About WPPOOL</h2>
                     <h3 class="text-3xl mb-4">Investing in WPPOOL for over 50 years</h3>
@@ -585,26 +585,26 @@
         <section class="px-4 md:px-14 mb-14">
             <h1 class="text-black text-3xl md:text-5xl mb-4 md:mb-12 text-center md:text-left">Selected WPPOOL Portfolio Companies</h1>
             <div class="potential-future-img">
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/6719c10e94889701e41b90debefa24e1.png" alt="stripe"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/18f0ec690e87fedaf34708b3793a7019.png" alt="Klarna"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/46cca3725baa8efbc50c86c0d06b33a4.png" alt="Plaid"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/e9624615f8bedf18d37230a9a516a9a5.png" alt="checkout.com"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/46cca3725baa8efbc50c86c0d06b33a4.png" alt="Revolut"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/e9624615f8bedf18d37230a9a516a9a5.png" alt="chime"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/a897ceb35a6be7c97f9453b4039575da.png" alt="N26"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/a4d53b39f620526adf145d9103502466.png" alt="Brex"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/a4d53b39f620526adf145d9103502466.png" alt="deel"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/d492506490d9317b0ed46994684bc943.png" alt="gusto"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/012e2b0284e8926bc05acd04f549e59b.png" alt="stripe"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/4c9848a539c4291e352e191c50d4fbc2.png" alt="Klarna"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/Vector.png" alt="Plaid"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/nota_bene_logo 1.png" alt="checkout.com"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/Recurly_Logo_Purple 1.png" alt="Revolut"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/Group 169.png" alt="chime"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/kensho-social-card 2.png" alt="N26"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/e92716bf-074b-46c2-bfdc-82dbfae1da06 2.png" alt="Brex"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/argyle-black-l 2.png" alt="deel"></div>
-                <div><img src="asset/Selected-WPPOOL-Portfolio-Companies/ss-logo-2color-black 1.png" alt="gusto"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/6719c10e94889701e41b90debefa24e1.png" alt="stripe"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/18f0ec690e87fedaf34708b3793a7019.png" alt="Klarna"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/46cca3725baa8efbc50c86c0d06b33a4.png" alt="Plaid"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/e9624615f8bedf18d37230a9a516a9a5.png" alt="checkout.com"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/46cca3725baa8efbc50c86c0d06b33a4.png" alt="Revolut"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/e9624615f8bedf18d37230a9a516a9a5.png" alt="chime"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/a897ceb35a6be7c97f9453b4039575da.png" alt="N26"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/a4d53b39f620526adf145d9103502466.png" alt="Brex"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/a4d53b39f620526adf145d9103502466.png" alt="deel"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/d492506490d9317b0ed46994684bc943.png" alt="gusto"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/012e2b0284e8926bc05acd04f549e59b.png" alt="stripe"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/4c9848a539c4291e352e191c50d4fbc2.png" alt="Klarna"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/Vector.png" alt="Plaid"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/nota_bene_logo 1.png" alt="checkout.com"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/Recurly_Logo_Purple 1.png" alt="Revolut"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/Group 169.png" alt="chime"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/kensho-social-card 2.png" alt="N26"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/e92716bf-074b-46c2-bfdc-82dbfae1da06 2.png" alt="Brex"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/argyle-black-l 2.png" alt="deel"></div>
+                <div class="rounded-xl"><img src="asset/Selected-WPPOOL-Portfolio-Companies/ss-logo-2color-black 1.png" alt="gusto"></div>
             </div>
         </section>
         <!-- Selected WPPOOL Portfolio Companies section End  -->
@@ -612,7 +612,7 @@
     </main>
 
     <!-- Footer Start-->
-    <footer class="bg-gray-200 py-10 rounded-md">
+    <footer class="bg-gray-200 py-10 rounded-2xl">
         <div class="container mx-auto px-4 md:px-14 flex flex-wrap my-8 md:my-16">
             <div class="w-full lg:w-2/3 mb-8 lg:mb-0 text-center md:text-left flex flex-col gap-6 justify-between">
                 <h2 class="text-2xl md:w-[450px] md:text-4xl text-black font-semibold mb-4">
@@ -671,8 +671,8 @@
     
     <script src="scripts.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@latest/dist/js/splide-extension-auto-scroll.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@latest/dist/js/splide-extension-auto-scroll.min.js"></script> -->
 
 </body>
 </html>
