--- a/index.html
+++ b/index.html
@@ -431,17 +431,27 @@
                 <p class="mt-2 text-gray-600 text-[20px] text-center md:text-left">Click through the slides or download the report to view natively on your device.</p>
             </div>
 
-            <div class="overflow-hidden splide" id="splide">
+            <div class="overflow-hidden">
+                <div>
+                    <div class="flex flex-col items-center md:flex-row  gap-2 md:gap-6">
+                        <img class="rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/22f80e576dcfba0b9c815598d4437195.jpg" alt="Slide 1">
+                        <img class="rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/3d456a5d2fffe172f1a16a1d04c8cce5.jpg" alt="Slide 2">
+                        <img class="rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/6f932a30dd43302972a9995887dff6ec.jpg" alt="Slide 2">
+                    </div>
+                </div>
+            </div>
+            <!-- use slider 👇 uncomment this code and 👆 comment this code--> 
+            <!-- <div class="overflow-hidden splide" id="splide">
                 <div class="splide__track h-[350px]">
-                    <div class="flex gap-6 splide__list">
+                    <div class="flex  gap-2 md:gap-6 splide__list">
                         <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/22f80e576dcfba0b9c815598d4437195.jpg" alt="Slide 1">
                         <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/3d456a5d2fffe172f1a16a1d04c8cce5.jpg" alt="Slide 2">
                         <img class="splide__slide rounded-lg w-[50%] h-[50%] md:w-[580px] md:h-[326px]" src="asset/6f932a30dd43302972a9995887dff6ec.jpg" alt="Slide 2">
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="bottom-content flex flex-col md:flex-row  justify-between md:mx-14 gap-6">
+            <div class="bottom-content flex flex-col md:flex-row  justify-between md:mx-14 gap-6 my-4">
                 <div class="flex flex-col md:flex-row items-center  gap-8 text-black flex-wrap">
                     <div class="buttom-left flex gap-5">
                         <div class="w-14 h-14 flex items-center justify-center">
